[gd_scene load_steps=7 format=3 uid="uid://b35ni0ekq4s13"]

[ext_resource type="Script" path="res://scenes/dev/camera_controller.gd" id="1_vtvvf"]
[ext_resource type="PackedScene" uid="uid://dqqp8rq4mi56q" path="res://scenes/levels/parallax_background.tscn" id="3_owgs5"]
[ext_resource type="Shader" path="res://scenes/dev/split_screen_2d.gdshader" id="3_trpck"]
[ext_resource type="PackedScene" uid="uid://duwq0e16i5j0e" path="res://scenes/dev/game_world.tscn" id="5_r1hd6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_urp55"]
shader = ExtResource("3_trpck")
shader_parameter/viewport_size = null
shader_parameter/split_active = null
shader_parameter/player1_position = null
shader_parameter/player2_position = null
shader_parameter/split_line_thickness = null
shader_parameter/split_line_color = null

[sub_resource type="CanvasTexture" id="CanvasTexture_amkli"]

[node name="Game" type="Node"]

[node name="Cameras" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vtvvf")

[node name="ViewportContainer" type="SubViewportContainer" parent="Cameras"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Viewport1" type="SubViewport" parent="Cameras/ViewportContainer"]
disable_3d = true
handle_input_locally = false
render_target_update_mode = 4

[node name="GameWorld" parent="Cameras/ViewportContainer/Viewport1" instance=ExtResource("5_r1hd6")]

[node name="Camera2D" type="Camera2D" parent="Cameras/ViewportContainer/Viewport1"]

[node name="ViewportContainer2" type="SubViewportContainer" parent="Cameras"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 512.0

[node name="Viewport2" type="SubViewport" parent="Cameras/ViewportContainer2"]
disable_3d = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="Cameras/ViewportContainer2/Viewport2"]

[node name="ParallaxBackground" parent="Cameras/ViewportContainer2/Viewport2" instance=ExtResource("3_owgs5")]

[node name="View2P" type="TextureRect" parent="Cameras"]
material = SubResource("ShaderMaterial_urp55")
layout_mode = 0
offset_right = 1148.0
offset_bottom = 648.0
texture = SubResource("CanvasTexture_amkli")
